[package]
name = "redpanda-chart-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "1" }
serde_yaml = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
jsonschema = "0.18"

